# vessel_tracking

./: .gitmodules  Makefile  README.md  docker-compose.yaml
alembic/: Dockerfile  alembic.ini  models.py
passssat/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.base.yml  docker-compose.common.yml  docker-compose.server.yml  pyproject.toml  requirements.txt
passssat/database/: positions.csv
passssat/pa_app/: main.py  security_utils.py
passssat/pa_app/routers/: charts.py  connect.py  login.py  operators.py  sensors_page.py
passssat/pa_app/routers/admin/: fleets.py  manufacturers.py  operators.py  sensor_classes.py  sensor_types.py  vessel_locations.py  vessel_routes.py  vessel_sensors.py  vessel_types.py  vessels.py
passssat/pa_app/utils/: utils.py
passssat/static/js/: location_history_manager.js  map_manager.js  route_manager.js  sensor_readings_chart.js
passssat/templates/: base.html  index.html  index_chart.html  index_db.html  index_login.html  influxdb_table.html  sensors_overview.html
passssat/templates/admin/: admin_base.html  fleets_form.html  fleets_list.html  manufacturers_form.html  manufacturers_list.html  operators_form.html  operators_list.html  sensor_classes_form.html  sensor_classes_list.html  sensor_types_form.html  sensor_types_list.html  vessel_location_management.html  vessel_route_management.html  vessel_sensors_management.html  vessel_type_sensor_requirements.html  vessel_types_form.html  vessel_types_list.html  vessels_form.html  vessels_list.html
passssat/templates/partials/: navbar.html
(+74 files in other folders)
